[package]
name = "lxc_rs"
version = "0.1.1"
authors = ["ArkashaJavelin"]
edition = "2021"
description = "A library for working with Linux Containers"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_info = "3"

[lib]
name = "lxc_rs"
path = "src/lxc.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
