[package]
name = "lxc_rust"
version = "0.1.2"
authors = ["ArkashaJavelin"]
edition = "2021"
description = "A library for working with Linux Containers"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "lxc_rust"
path = "src/lxc.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
